# SuperShader

./: .gitignore  CMakeLists.txt  DATA_FLOW_TECHNICAL_DOCS.md  LICENSE  PLAN.md  QWEN.md  README.md  SEMANTIC_MATCHING_RULES.md  TASKS.md  USER_GUIDE.md  advanced_shader_translator.py  ai_enhanced_graphics.py  analyze_tags.py  ar_vr_systems.py  benchmark_system.py  build_app.py  build_renderer.sh  catalog_features.py  compatibility_tester.py  comprehensive_test_report_20251114_224359.json  comprehensive_test_suite.py  compute_shader_equivalents.py  conditional_module_includer.py  config_cel_shading.json  config_pbr_with_shadows.json  config_phong_lighting.json  config_raymarching.json  core_tests.py  cpu_shader_engine.py  create_final_integration.py  create_initial_module_library.py  create_module_engine.py  create_module_registry.py  create_performance_system.py  create_pseudocode_translator.py  create_updated_module_library.py  critical_path_optimizer.py  data_flow_graph.json  data_flow_uml.puml  demo_shader.glsl  (+90 more)
analysis/: SUMMARY.md  genre_categorization.txt  tag_frequencies.txt  tag_to_shaders.txt
catalogs/: feature_catalog_report.txt
distributions/: install_supershader.sh  package_metadata.json  setup.py
docs/: module_index.md
generator/: shader_generation_pipeline.py  template.glsl
include/: Communication.h  Renderer.h  Scene.h  Shader.h
management/: module_combiner.py
modules/: README.md  cross_genre_data_flow_validator.py  library_registry.json  registry.json
parallella_shaders/: epiphany_shader.c
processed/: processed_cache.pkl  (+1 more)
src/: main.cpp
(+367 files in other folders)
